--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,16 @@ th { background: var(--pp-3); text-align: left; color: var(--pp-1); }
 #empTable button:last-child {
   margin-right: 0;
 }
+
+td button + button {
+  margin-left: 8px;
+}
+
+@media (max-width: 480px) {
+  td button + button {
+    margin-left: 0;
+    margin-top: 8px;
+    display: block;
+    width: 100%;
+  }
+}
