--- a/styles.css
+++ b/styles.css
@@ -203,3 +203,24 @@ td button + button {
     width: 100%;
   }
 }
+
+td button {
+  min-width: 100px;
+  text-align: center;
+}
+
+
+td button + button {
+  margin-left: 8px;
+}
+
+
+@media (max-width: 480px) {
+  td button {
+    width: 100%;
+  }
+  td button + button {
+    margin-left: 0;
+    margin-top: 8px;
+  }
+}
